Native/Test/KL/CORE-141.kl
function foo( Integer bufferID[0] )
{
}
